--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-datetime": "^2.1.2",
+    "nodemailer": "^6.7.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.12"
   }
 }
